wk_taa_taaqa/src/objects/Price_List_Defaulting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Price_List_ID__c</fullName>
        <label>Price List ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Name__c</fullName>
        <label>Price List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Header_Record_Type__c</fullName>
        <label>Quote Header Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Price List Defaulting</label>
</CustomObject>